# c-sandbox

./: .gitignore  CMakeLists.txt  README.md
include/: PCLtoVTK.h  PCLtoVTK.hpp  surface_segmentation.h
parts/meshes/pcl-greedy/: cup-side-with-hole.vtk
parts/meshes/vtk-delaunay-alpha/cup-side-with-hole/: alpha-0.0025.vtk  alpha-0.0030.vtk  alpha-0.0035.vtk  alpha-0.0100.vtk  alpha-0.0200.vtk  alpha-0.0250.vtk  alpha-0.2000.vtk  alpha-0.2500.vtk
src/: pcl_greedy_projection.cpp  surface_segmentation.cpp  vtkSmoothPolyDataFilter.cpp  vtk_delaunay_projection.cpp
src/hello/: hello_world.cpp
src/pcl/: moment_of_inertia.cpp  pcl_greedy_projection.cpp
src/utils/: PCDtoVTP.cpp  ensenso_util.cpp  surface_segmentation.cpp
src/vtk/: checkVTKVersion.cpp  smoothPolyDataFilter.py
